--- a/.github/workflows/build-and-run-gha-cache-make.yaml
+++ b/.github/workflows/build-and-run-gha-cache-make.yaml
@@ -1,9 +1,9 @@
 name: Build and run using GHA Cache through make
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
+  # push:
+  # branches: ["main"]
+  # pull_request:
   workflow_dispatch:
 
 jobs:
