Added print statement for environment variables

--- a/.github/workflows/build-and-run-gha-cache-make.yaml
+++ b/.github/workflows/build-and-run-gha-cache-make.yaml
@@ -32,7 +32,9 @@ jobs:
           docker buildx inspect "$BUILDX_BUILDER_ID"
 
       - name: Build (populate cache) via Makefile
-        run: make build
+        run: |
+          env
+          make build
 
   say:
     needs: build-cache
