Sorting debug message

--- a/.github/workflows/build-and-run-gha-cache-make.yaml
+++ b/.github/workflows/build-and-run-gha-cache-make.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build (populate cache) via Makefile
         run: |
-          env
+          env | sort
           make build
 
   say:
