--- a/.github/workflows/build-and-run-explicit-image-cache.yaml
+++ b/.github/workflows/build-and-run-explicit-image-cache.yaml
@@ -1,9 +1,9 @@
 name: Cache images as build artifacts
 
 on:
-  # push:
-  #   branches: ["main"]
-  # pull_request:
+  push:
+    branches: ["main"]
+  pull_request:
   workflow_dispatch:
 
 jobs:
