--- a/.github/workflows/build-and-run-gha-cache-actions.yaml
+++ b/.github/workflows/build-and-run-gha-cache-actions.yaml
@@ -1,9 +1,9 @@
 name: Images into cache through actions
 
 on:
-  # push:
-  #   branches: ["main"]
-  # pull_request:
+  push:
+    branches: ["main"]
+  pull_request:
   workflow_dispatch:
 
 jobs:
