--- a/.github/workflows/build-and-run-explicit-image-cache.yaml
+++ b/.github/workflows/build-and-run-explicit-image-cache.yaml
@@ -13,7 +13,7 @@ jobs:
       actions: write
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.ref_name }}
+      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
       contents: read
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.ref_name }}
+      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
     strategy:
       fail-fast: false
       matrix:
