Defending against spaces in workflow names

--- a/.github/workflows/build-and-run-gha-cache-actions.yaml
+++ b/.github/workflows/build-and-run-gha-cache-actions.yaml
@@ -13,7 +13,7 @@ jobs:
       actions: write
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
+      CACHE_SCOPE: ${{ replace(replace(github.workflow, ' ', '-'), '/', '-') }}-${{ replace(github.ref_name, '/', '-') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
       actions: read
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
+      CACHE_SCOPE: ${{ replace(replace(github.workflow, ' ', '-'), '/', '-') }}-${{ replace(github.ref_name, '/', '-') }}
     strategy:
       fail-fast: false
       matrix:
