--- a/.github/workflows/build-and-run-gha-cache-make.yaml
+++ b/.github/workflows/build-and-run-gha-cache-make.yaml
@@ -13,7 +13,7 @@ jobs:
       actions: write
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
+      CACHE_SCOPE: ${{ replace(replace(github.workflow, ' ', '-'), '/', '-') }}-${{ replace(github.ref_name, '/', '-') }}
       ENABLE_GHA_CACHE_SAVE: "true"
       ENABLE_GHA_BACKEND: "true"
     steps:
@@ -38,7 +38,7 @@ jobs:
       actions: read
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
+      CACHE_SCOPE: ${{ replace(replace(github.workflow, ' ', '-'), '/', '-') }}-${{ replace(github.ref_name, '/', '-') }}
       ENABLE_GHA_CACHE_SAVE: "false"
       ENABLE_GHA_BACKEND: "true"
     strategy:
