--- a/.github/workflows/build-and-run-explicit-image-cache.yaml
+++ b/.github/workflows/build-and-run-explicit-image-cache.yaml
@@ -12,11 +12,13 @@ jobs:
       contents: read
       actions: write
     runs-on: ubuntu-latest
-    env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set cache scope
+        id: cache-scope
+        uses: ./.github/actions/set-docker-cache-scope
 
       - name: Set up Docker Buildx
         id: buildx
@@ -44,8 +46,6 @@ jobs:
     permissions:
       contents: read
     runs-on: ubuntu-latest
-    env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
     strategy:
       fail-fast: false
       matrix:
@@ -57,6 +57,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set cache scope
+        id: cache-scope
+        uses: ./.github/actions/set-docker-cache-scope
 
       # Download + load the image built in the previous job
       - name: Download image artifact
