--- a/.github/workflows/build-and-run-gha-cache-make.yaml
+++ b/.github/workflows/build-and-run-gha-cache-make.yaml
@@ -13,12 +13,15 @@ jobs:
       actions: write
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
       ENABLE_GHA_CACHE_SAVE: "true"
       ENABLE_GHA_BACKEND: "true"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set cache scope
+        id: cache-scope
+        uses: ./.github/actions/set-docker-cache-scope
 
       - name: Set up Docker Buildx
         id: buildx
@@ -38,7 +41,6 @@ jobs:
       actions: read
     runs-on: ubuntu-latest
     env:
-      CACHE_SCOPE: ${{ github.workflow }}-${{ github.ref_name }}
       ENABLE_GHA_CACHE_SAVE: "false"
       ENABLE_GHA_BACKEND: "true"
     strategy:
@@ -52,6 +54,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set cache scope
+        id: cache-scope
+        uses: ./.github/actions/set-docker-cache-scope
 
       - name: Set up Docker Buildx
         id: buildx
